# Mining-Pool

./: CMakeLists.txt  LICENSE  README.md  TODO  api.conf  dbschema_sqlite.sql  pool.conf
NexusWebUI/: .env_example  .gitignore  HowTo-Setup.txt  InterfaceDefinition.md  InterfaceDefinition.txt  README.md  gunicorn_startscript_example.sh  manage.py  requirements.txt
NexusWebUI/NexusWebUI/: asgi.py  settings.py  (+3 more)
include/: date.h
libs/: sqlite3.lib
src/: main.cpp  miner_connection.cpp  miner_connection.hpp  pool.cpp  pool.hpp  pool_manager.cpp  pool_manager.hpp  session.cpp  session.hpp  timer_manager.cpp  timer_manager.hpp  utils.hpp  version.h.in  wallet_connection.cpp  wallet_connection.hpp
src/TAO/: CMakeLists.txt
src/TAO/inc/TAO/Ledger/: difficulty.h
src/TAO/inc/TAO/Register/types/: address.h
src/TAO/inc/TAO/Util/: encoding.h  memory.h  mutex.h
src/TAO/inc/Util/: memory.h
src/TAO/src/Register/types/: address.cpp
src/TAO/src/TAO/Ledger/: difficulty.cpp  prime.cpp
src/TAO/src/TAO/Register/types/: address.cpp
src/TAO/src/TAO/Util/: encoding.cpp  memory.cpp
src/TAO/src/Util/: encoding.cpp  memory.cpp
src/api/: CMakeLists.txt
src/api/inc/api/: component.hpp  create_component.hpp  data_access.hpp  method.hpp  parser.hpp  server.hpp  types.hpp
src/api/src/api/: app_component.hpp  client.hpp  component_impl.cpp  component_impl.hpp  connection.cpp  connection.hpp  controller.cpp  controller.hpp  controller_auth.hpp  controller_base.hpp  controller_helper.hpp  create_component.cpp  data_access.cpp  data_access.hpp  data_access_impl.cpp  data_access_impl.hpp  dto.hpp  method_impl.cpp  method_impl.hpp  parser_impl.cpp  parser_impl.hpp  server.cpp  shared_data_access.hpp  shared_data_reader.hpp
src/api/src/api/controller/: controller_account.hpp  controller_auth.hpp  controller_base.hpp  controller_helper.hpp  controller_mining_calc.hpp  controller_overview.hpp  controller_statistics.hpp  dto.hpp
src/common/: CMakeLists.txt
src/common/inc/common/: pool_api_data_exchange.hpp  types.hpp  utils.hpp
src/common/src/common/: pool_api_data_exchange_impl.cpp  pool_api_data_exchange_impl.hpp  utils.cpp
src/nexus_http_interface/: CMakeLists.txt
src/nexus_http_interface/inc/nexus_http_interface/: component.hpp  create_component.hpp  manager.hpp
src/nexus_http_interface/src/nexus_http_interface/: api_client.hpp  component_impl.cpp  component_impl.hpp  create_component.cpp  manager_impl.cpp  manager_impl.hpp
src/persistance/: CMakeLists.txt
src/persistance/inc/persistance/: component.hpp  create_component.hpp  data_access.hpp  data_access_factory.hpp  data_reader.hpp  data_reader_factory.hpp  data_storage.hpp  data_storage_factory.hpp  data_writer.hpp  data_writer_factory.hpp  types.hpp
src/persistance/inc/persistance/command/: command.hpp  command_factory.hpp  types.hpp
src/persistance/src/persistance/: component_impl.cpp  component_impl.hpp  create_component.cpp  data_access_factory_impl.hpp  data_access_impl.cpp  data_access_impl.hpp  data_reader_factory_impl.hpp  data_reader_impl.cpp  data_reader_impl.hpp  data_storage_factory_impl.hpp  data_storage_impl.cpp  data_storage_impl.hpp  data_writer_factory_impl.hpp  data_writer_impl.cpp  data_writer_impl.hpp  storage_manager.hpp  storage_manager_impl.cpp  storage_manager_impl.hpp
src/persistance/src/persistance/command/: command_factory_impl.hpp  command_impl.cpp  command_impl.hpp
src/persistance/src/persistance/sqlite/: data_storage_impl.cpp  data_storage_impl.hpp  storage_manager_impl.cpp  storage_manager_impl.hpp  types.hpp  utils.cpp  utils.hpp
src/persistance/src/persistance/sqlite/command/: command_factory_impl.hpp  command_impl.cpp  command_impl.hpp
src/pool/: CMakeLists.txt
src/pool/inc/pool/: miner_connection.hpp  pool_manager.hpp  session.hpp  types.hpp  utils.hpp  wallet_connection.hpp
src/pool/src/pool/: miner_connection.cpp  miner_connection_impl.cpp  miner_connection_impl.hpp  miner_connection_legacy_impl.cpp  miner_connection_legacy_impl.hpp  notifications.hpp  pool_manager.cpp  pool_manager_impl.cpp  pool_manager_impl.hpp  session.cpp  session_impl.cpp  session_impl.hpp  shared_data_reader.hpp  timer_manager.cpp  timer_manager_wallet.cpp  timer_manager_wallet.hpp  wallet_connection.cpp  wallet_connection_impl.cpp  wallet_connection_impl.hpp
src/reward/: CMakeLists.txt
src/reward/inc/reward/: component.hpp  create_component.hpp  manager.hpp  manager_impl.hpp
src/reward/src/reward/: component_impl.cpp  component_impl.hpp  create_component.cpp  manager_impl.cpp  manager_impl.hpp  payout_manager.cpp  payout_manager.hpp
tests/: CMakeLists.txt
tests/api/: CMakeLists.txt  api_fixture.hpp  api_test.cpp
tests/mock/: CMakeLists.txt
tests/mock/chrono/: CMakeLists.txt
tests/mock/chrono/inc_mock/chrono/: timer_factory_mock.hpp  timer_mock.hpp
tests/mock/common/: CMakeLists.txt
tests/mock/common/inc_mock/common/: pool_api_data_exchange_mock.hpp
tests/mock/config/: CMakeLists.txt
tests/mock/config/inc_mock/config/: config_mock.hpp
tests/mock/network/: CMakeLists.txt
tests/mock/network/inc_mock/network/: component_mock.hpp  connection_mock.hpp  socket_factory_mock.hpp  socket_mock.hpp
tests/mock/nexus_http_interface/: CMakeLists.txt
tests/mock/nexus_http_interface/inc_mock/nexus_http_interface/: component_mock.hpp
tests/mock/persistance/: CMakeLists.txt
tests/mock/persistance/inc_mock/persistance/: component_mock.hpp  data_reader_factory_mock.hpp  data_reader_mock.hpp  data_writer_factory_mock.hpp  data_writer_mock.hpp
tests/mock/pool/: CMakeLists.txt
tests/mock/pool/inc_mock/pool/: miner_connection_mock.hpp  pool_manager_mock.hpp  session_mock.hpp  wallet_connection_mock.hpp
tests/nexus_http_interface/: CMakeLists.txt  nexus_http_interface_fixture.hpp  nexus_http_interface_test.cpp
tests/persistance/: CMakeLists.txt  persistance_fixture.hpp  persistance_test.cpp  test_data.hpp
tests/pool/: CMakeLists.txt  llp_test.cpp  miner_connection_test.cpp  utils_test.cpp
tests/reward/: CMakeLists.txt  reward_fixture.hpp  reward_test.cpp  test_data.hpp
(+89 files in other folders)
